3ac3bb91a4e801dfa9c8bf1389fafac5108c3adb Dev fix: Dark mode BS5 select lists
DD-2662

Sync to source repo @3ac3bb91a4e801dfa9c8bf1389fafac5108c3adb

--- a/css/searchBuilder.jqueryui.css
+++ b/css/searchBuilder.jqueryui.css
@@ -79,7 +79,6 @@ div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria input.dtsb-input {
   margin-right: 0.8em;
   min-width: 5em;
   max-width: 20em;
-  background-color: #eeeeee;
   color: inherit;
 }
 div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria select.dtsb-dropDown option.dtsb-notItalic,
